# dryad-svn

./: CHANGELOG.overall  usecases.sxw
dryad/releases/m1/: Makefile.am  dryad.kdevelop  tags
dryad/releases/m1/databases/: generic.logsentry.db  linux.logsentry.db  sun.logsentry.db
dryad/releases/m1/src/: analyze.h  cache.cpp  database.h  dqueue.h  drarray.cpp  dryad.cpp  functions.h  rfc3164.h
dryad/trunk/: AUTHORS  Doxyfile  Makefile.am  Makefile.in  README  TODO  WIN32_BUILD_INSTRUCTIONS.txt  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  dryad.kdevelop  dryad.kdevelop.pcs  dryad.kdevses  reg_test.cnf.dist  reg_test.db  regression_test.sh  tags
dryad/trunk/autom4te.cache/: output.0  requests  traces.0
dryad/trunk/databases/: Makefile.in  bsdos.logsentry.db  digital.logsentry.db  freebsd.logsentry.db  generic.logsentry.db  hpux.logsentry.db  linux.logsentry.db  sun.logsentry.db
dryad/trunk/docs/: Makefile.in  dryad.conf.dist
dryad/trunk/src/: Makefile.am  Makefile.in  analyze.cpp  analyze.h  cache.cpp  conf.cpp  conf.h  darray.cpp  database.cpp  database.h  dfilestream.cpp  dfilestream.h  dryad.cpp  dryerr.cpp  dryerr.h  dstring.cpp  dstring.h  lrsp-server.cpp  lrsp-server.h  rfc3164.cpp  rfc3164.h
dryad/trunk/src/plugins/: Makefile.am  Makefile.in  email.cpp  external.cpp  file.cpp  null.cpp  plugin.h  python.cpp
liblrsp/design/: intro.docbook
liblrsp/trunk/: Doxyfile  configure  configure.in  trunk.kdevelop
liblrsp/trunk/src/: lrsp-logger.c  lrsp-server.c  lrsp.c  lrsp.h
manual/: Makefile  config.xml  dryad-manual.docbook  install.xml  intro.xml  security.xml
releases/m1/: aclocal.m4  config.h.in  configure  configure.in
releases/m1/autom4te.cache/: output.0  traces.0
releases/m1/databases/: Makefile.in  bsdos.logsentry.db  digital.logsentry.db  freebsd.logsentry.db
releases/m1/docs/: Makefile.am
releases/m1/src/: analyze.cpp  cache.h  conf.h  darray.cpp  darray.h  database.cpp  dfilestream.cpp  dqueue.cpp  functions.cpp
releases/m1/src/plugins/: Makefile.am  email.cpp  plugin.h
syslog-tcp/design/: Makefile  details.docbook  lrsp.docbook
syslog-tcp/trunk/: AUTHORS  Doxyfile  configure  configure.in  trunk.kdevelop
syslog-tcp/trunk/src/: Makefile.am  lrsp-logger.c  lrsp.c  lrsp.h
syslog-tcp/trunk/templates/: c
tester/: tester.c
tester/lrsp/: build.sh  tester.c
tester/module_test/: build.sh  module_test.cpp
tester/udp/: build.sh  tester.c
tester/unit/: build.sh  dcache_unit.cpp  dstring_unit.cpp
trunk/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  dryad.kdevelop  dryad.kdevelop.pcs  dryad.kdevses  tags
trunk/autom4te.cache/: output.0  traces.0
trunk/databases/: Makefile.am
trunk/docs/: Makefile.in  dryad.conf.dist
trunk/src/: Makefile.am  Makefile.in  analyze.cpp  analyze.h  cache.cpp  cache.h  conf.cpp  conf.h  darray.cpp  darray.h  database.cpp  database.h  dblist.h  dfilestream.cpp  dfilestream.h  dqueue.cpp  dqueue.h  drarray.cpp  drarray.h  dryad.cpp  dsarray.cpp  dsarray.h  dstring.cpp  dstring.h  functions.cpp  functions.h  network.cpp  network.h  rfc3164.cpp  rfc3164.h  syslog.h
trunk/src/plugins/: Makefile.am  Makefile.in  email.cpp  plugin.h
trunk/templates/: h
