AC_INIT([liblrsp], [0.1], [liblrsp-bugs@rtlad.org])

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE([AC_PACKAGE_NAME], [AC_PACKAGE_VERSION])

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AC_CHECK_LIB([pthread], [pthread_mutex_lock], [AC_DEFINE([HAVE_PTHREADS],,[Define this symbol if your platform has pthreads])],)

AC_OUTPUT(Makefile src/Makefile)
