INCLUDES = $(all_includes)
METASOURCES = AUTO
libemail_la_LDFLAGS = -module 
noinst_HEADERS =  plugin.h
libemail_la_SOURCES = email.cpp
libnull_la_LDFLAGS = -module 
libnull_la_SOURCES =  null.cpp
pkglib_LTLIBRARIES =  libfile.la libemail.la libnull.la
libfile_la_SOURCES =  file.cpp
libfile_la_LDFLAGS = -module
